[package]
authors = [
    "Dilshod Tadjibaev (@antimora)",
    "Nathaniel Simard (@nathanielsimard)",
]
categories = ["science", "mathematics", "algorithms"]
description = "Common crate for CubeCL"
edition.workspace = true
keywords = ["gpu", "cuda", "wgpu"]
license.workspace = true
name = "cubecl-common"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-common"
version.workspace = true


[lints]
workspace = true


[features]
cache = ["std", "serde_json", "dirs", "sanitize-filename"]
compilation-cache = ["cache", "bincode"]
default = ["std"]
fp4 = ["float4"]
fp8 = ["float8"]
hash = ["xxhash-rust"]
serde = ["serde_bytes"]
shared-bytes = ["dep:bytes"]
std = [
    "rand/std",
    "futures-lite",
    "rand/thread_rng",
    "serde_json?/std",
    "parking_lot",
    "backtrace",
    "oneshot/std",
]
tracing = ["dep:tracing"]


[dependencies]
# Runtime Deps
log = { workspace = true }
tracing = { workspace = true, features = ["attributes"], optional = true }
oneshot = { workspace = true }
smallbox = { version = "0.8.8" }

# ** Please make sure all dependencies support no_std when std is disabled **
bytemuck = { workspace = true, features = ["derive"] }
derive-new = { workspace = true }
derive_more = { workspace = true, features = [
    "not",
    "add",
    "mul",
    "add_assign",
    "mul_assign",
    "display",
    "deref",
    "deref_mut",
] }
float4 = { workspace = true, optional = true }
float8 = { workspace = true, optional = true }
half = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
spin = { workspace = true } # using in place of use std::sync::Mutex;

cfg-if = { workspace = true }

# Cache
bincode = { workspace = true, features = ["std", "serde"], optional = true }
dirs = { workspace = true, optional = true }
hashbrown = { workspace = true }
sanitize-filename = { workspace = true, optional = true }
serde_bytes = { workspace = true, features = ["alloc"], optional = true }
serde_json = { workspace = true, features = ["alloc"], optional = true }

# Hash
xxhash-rust = { workspace = true, features = [
    "xxh3",
    "const_xxh3",
], optional = true }

# Only activate futures for std env
embassy-futures = { version = "0.1.1" }
futures-lite = { workspace = true, features = [
    "std",
], default-features = false, optional = true }

backtrace = { version = "0.3", optional = true, features = ["std"] }
parking_lot = { version = "0.12.5", default-features = false, optional = true }

[target.'cfg(target_has_atomic = "ptr")'.dependencies]
bytes = { workspace = true, optional = true }
spin = { workspace = true, features = ["mutex", "spin_mutex"] }

[target.'cfg(not(target_has_atomic = "ptr"))'.dependencies]
portable-atomic = { workspace = true }
portable-atomic-util = { workspace = true }
spin = { workspace = true, features = [
    "mutex",
    "spin_mutex",
    "portable_atomic",
] }
# Enable extra-platforms for bytes on targets without native atomics
bytes = { workspace = true, features = ["extra-platforms"], optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = { workspace = true }

# Default dependency for all targets
[target.'cfg(not(target_os = "none"))'.dependencies]
web-time = { workspace = true }

# Only for true no_std / embedded targets
[target.'cfg(target_os = "none")'.dependencies]
embassy-time = { workspace = true }

[build-dependencies]
cfg_aliases = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
dashmap = { workspace = true }
tempfile = "3.20"
test-log = { workspace = true, features = ["trace"] }        # Cache
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
debug = true

[[bench]]
harness = false
name = "device_handle"
