[package]
authors = ["Genna Wingert", "louisfd <louisfd94@gmail.com>"]
categories = ["science", "mathematics", "algorithms"]
description = "CubeCL Convolution Algorithms."
edition.workspace = true
keywords = []
license.workspace = true
name = "cubecl-convolution"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/cubecl-convolution"
version.workspace = true

[features]
default = ["std", "cubecl-runtime/default", "cubecl-core/default"]
std = ["cubecl-runtime/std", "cubecl-core/std"]
export_tests = ["pretty_assertions", "rand"]

[dependencies]
cubecl-core = { path = "../cubecl-core", version = "0.4.0", default-features = false }
cubecl-runtime = { path = "../cubecl-runtime", version = "0.4.0", default-features = false }
cubecl-linalg = { path = "../cubecl-linalg", version = "0.4.0", default-features = false }
pretty_assertions = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
half = { workspace = true }
serde = { workspace = true }
