[package]
authors = ["Genna Wingert", "louisfd <louisfd94@gmail.com>"]
categories = ["science", "mathematics", "algorithms"]
description = "CubeCL Convolution Kernels Engine"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubecl-convolution"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-convolution"
version.workspace = true

[features]
default = ["std", "cubecl-runtime/default", "cubecl-core/default"]
export_tests = ["pretty_assertions"]
std = ["cubecl-runtime/std", "cubecl-core/std"]

conv_tests = []

[dependencies]
bytemuck = { workspace = true }
cubecl-common = { path = "../cubecl-common", version = "=0.9.0-pre.3", default-features = false }
cubecl-core = { path = "../cubecl-core", version = "=0.9.0-pre.3", default-features = false }
cubecl-matmul = { path = "../cubecl-matmul", version = "=0.9.0-pre.3", default-features = false }
cubecl-runtime = { path = "../cubecl-runtime", version = "=0.9.0-pre.3", default-features = false }
cubecl-std = { path = "../cubecl-std", version = "=0.9.0-pre.3", default-features = false }
cubecl-reduce = { path = "../cubecl-reduce", version = "=0.9.0-pre.3", default-features = false }
cubecl-random = { path = "../cubecl-random", version = "=0.9.0-pre.3", default-features = false }
half = { workspace = true, features = ["bytemuck"] }
pretty_assertions = { workspace = true, optional = true }
serde = { workspace = true }

[dev-dependencies]
trybuild = "1"
