[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com>",
]
categories = ["science", "mathematics", "algorithms"]
description = "CubeCL core create"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubecl-core"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-core"
version.workspace = true

[features]
default = ["cubecl-runtime/default", "cubecl-ir/default"]
export_tests = ["tempfile"]
std = ["cubecl-runtime/std", "cubecl-ir/std", "tracing/default"]
template = []

[dependencies]
cubecl-ir = { path = "../cubecl-ir", version = "=0.9.0-pre.6", default-features = false, features = [
    "serde",
] }
cubecl-runtime = { path = "../cubecl-runtime", version = "=0.9.0-pre.6", default-features = false }

bitflags = { workspace = true }
bytemuck = { workspace = true }
cubecl-common = { path = "../cubecl-common", version = "=0.9.0-pre.6", default-features = false }
cubecl-macros = { path = "../cubecl-macros", version = "=0.9.0-pre.6", default-features = false }
derive-new = { workspace = true }
derive_more = { workspace = true, features = [
    "not",
    "add",
    "mul",
    "add_assign",
    "mul_assign",
    "display",
] }
enumset = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }
hashbrown = { workspace = true }

log = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

num-traits = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
variadics_please = { workspace = true }
tempfile = { version = "3.20", optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
trybuild = "1"
