[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com>",
]
categories = ["science", "mathematics", "algorithms"]
description = "CubeCL core create"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubecl-core"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-core"
version.workspace = true

[features]
default = ["cubecl-runtime/default", "cubecl-ir/default"]
export_tests = ["tempfile", "test-log/trace"]
std = ["cubecl-runtime/std", "cubecl-ir/std"]
template = []

tracing = ["dep:tracing", "cubecl-runtime/tracing", "cubecl-ir/tracing"]

[dependencies]
# Runtime Deps
log = { workspace = true }
tracing = { workspace = true, features = ["attributes"], optional = true }
test-log = { workspace = true, optional = true }

cubecl-ir = { path = "../cubecl-ir", version = "=0.10.0-pre.1", default-features = false, features = [
    "serde",
] }
cubecl-runtime = { path = "../cubecl-runtime", version = "=0.10.0-pre.1", default-features = false }

bitflags = { workspace = true }
bytemuck = { workspace = true }
cubecl-common = { path = "../cubecl-common", version = "=0.10.0-pre.1", default-features = false }
cubecl-macros = { path = "../cubecl-macros", version = "=0.10.0-pre.1", default-features = false }
derive-new = { workspace = true }
derive_more = { workspace = true, features = [
    "not",
    "add",
    "mul",
    "add_assign",
    "mul_assign",
    "display",
] }
enumset = { workspace = true }
float-ord = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }
hashbrown = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { version = "3.20", optional = true }
variadics_please = { workspace = true }

[dev-dependencies]
test-log = { workspace = true, features = ["trace"] }
pretty_assertions = { workspace = true }
trybuild = "1"
