[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "CPP transpiler for CubeCL"
edition.workspace = true
keywords = ["cpp", "gpu", "cuda", "hip", "metal"]
license.workspace = true
name = "cubecl-cpp"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-cpp"
version.workspace = true

[features]
default = [
    "cubecl-runtime/default",
    "cubecl-common/default",
    "cubecl-core/default",
    "metal",
]
std = ["cubecl-runtime/std", "cubecl-common/std", "cubecl-core/std"]
cuda = []
hip = []
metal = []

[dependencies]
cubecl-common = { path = "../cubecl-common", version = "0.7.0", default-features = false }
cubecl-core = { path = "../cubecl-core", version = "0.7.0", default-features = false }
cubecl-runtime = { path = "../cubecl-runtime", version = "0.7.0", default-features = false, features = [
    "channel-mutex",
] }

bytemuck = { workspace = true }
derive-new = { workspace = true }
half = { workspace = true }
log = { workspace = true }
