[package]
authors = ["marcantoinem <marc-antoine.m@outlook.com>"]
categories = ["science"]
description = "CPU runtime for CubeCL"
edition.workspace = true
keywords = ["cpu"]
license.workspace = true
name = "cubecl-cpu"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubecl/tree/main/crates/cubecl-cpu"
version.workspace = true

[features]
default = [
    "std",
    "cubecl-runtime/default",
    "cubecl-common/default",
    "cubecl-core/default",
]

std = ["cubecl-runtime/std", "cubecl-common/std", "cubecl-core/std"]
mlir-dump = []


[dependencies]
cubecl-common = { path = "../cubecl-common", version = "=0.9.0-pre.5", default-features = false, features = [
    "std",
] }
cubecl-core = { path = "../cubecl-core", version = "=0.9.0-pre.5", default-features = false, features = [
    "std",
] }
cubecl-opt = { path = "../cubecl-opt", version = "=0.9.0-pre.5", default-features = false, features = [
    "std",
] }
cubecl-runtime = { path = "../cubecl-runtime", version = "=0.9.0-pre.5", default-features = false, features = [
    "channel-mutex",
    "std",
] }
cubecl-std = { path = "../cubecl-std", version = "=0.9.0-pre.5", default-features = false }


bytemuck = { workspace = true }
derive-new = { workspace = true }
half = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
sysinfo = { workspace = true }
tracel-llvm = { workspace = true }

[dev-dependencies]
cubecl-core = { path = "../cubecl-core", version = "=0.9.0-pre.5", features = [
    "export_tests",
] }
cubecl-std = { path = "../cubecl-std", version = "=0.9.0-pre.5", features = [
    "export_tests",
] }
paste = { workspace = true }
pretty_assertions = { workspace = true }

[build-dependencies]
tracel-llvm-bundler = { version = "20.1.4-5" }
